--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shirt Store</title>
+    <meta name="description"
+        content="Shop stylish shirts and hoodies online at Boyzy Buy. Affordable fashion with fast delivery.">
+    <meta name="keywords" content="Boyzy Buy, shirt shop, hoodie, fashion store, buy clothes online">
+    <meta name="author" content="Boy Silavong">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -19,22 +23,44 @@
     </main>
 
     <div id="cart">
-        <h2>🛒 Add to cart</h2>
+        <h2>🛒 Add to this</h2>
         <div id="cart-items"></div>
         <p id="total-price">Total: 0 VND</p>
+
         <button onclick="checkout()">✅ Check Out</button>
     </div>
 
+    <div id="checkout-form" style="display:none; margin-top:20px;">
+        <h2>Customer Information</h2>
+        <input type="text" id="fullname" placeholder="Full Name" required>
+        <input type="tel" id="phone" placeholder="Phone Number" required>
+        <textarea id="address" placeholder="Shipping Address" required></textarea>
+
+        <h3>Payment Method</h3>
+        <select id="payment">
+            <option value="bank">Bank Transfer</option>
+            <option value="cod">Cash on Delivery</option>
+            <option value="JDB">JDB Bank</option>
+            <option value="BCEL">BCEL Bank</option>
+            <option value="BIDB">BIDV</option>
+        </select>
+
+        <button onclick="submitOrder()">Confirm Order</button>
+    </div>
+
+
     <script>
         const products = [
-            { id: 1, name: "Frame Button-Up Shirt (Black)", price: 500000, image: "https://i.pinimg.com/1200x/aa/90/cf/aa90cff663d02ecb264b6b4dca235c64.jpg" },
+            { id: 1, name: "Frame Button-Up Shirt (Frame)", price: 500000, image: "https://i.pinimg.com/1200x/aa/90/cf/aa90cff663d02ecb264b6b4dca235c64.jpg" },
             { id: 2, name: "Knit Shirt – Black", price: 800000, image: "https://i.pinimg.com/1200x/b1/b4/7f/b1b47f33ed75383583951f65afa9d151.jpg" },
             { id: 3, name: "Shirt Special", price: 300000, image: "https://i.pinimg.com/1200x/33/7f/75/337f758e64d55b910179c2044444d094.jpg" },
             { id: 4, name: "Knit Shirt – Black", price: 600000, image: "https://i.pinimg.com/736x/8a/e3/cd/8ae3cd45e08a7233bd94d0e22782a80a.jpg" },
             { id: 5, name: "Knit Shirt – White", price: 250000, image: "https://i.pinimg.com/736x/ab/7d/b6/ab7db62f3546c13462c4f56d60165b78.jpg" },
             { id: 6, name: "Hoodie – Red", price: 150000, image: "https://i.pinimg.com/1200x/44/f4/9e/44f49ed95795f2147d107696d80c5981.jpg" },
             { id: 7, name: "TC1-TS2104", price: 200000, image: "https://i.pinimg.com/736x/2a/e9/f7/2ae9f7b30bc3f330cc4260c58eea50b0.jpg" },
-            { id: 8, name: "knit Shirt - green", price: 700000, image: "https://i.pinimg.com/736x/1d/2f/e4/1d2fe4450bba74d9af6c2c709c9deb09.jpg" }
+            { id: 8, name: "knit Shirt - green", price: 700000, image: "https://i.pinimg.com/736x/1d/2f/e4/1d2fe4450bba74d9af6c2c709c9deb09.jpg" },
+            { id: 9, name: "Buck Masson", price: 350000, image: "https://i.pinimg.com/1200x/2d/ce/d3/2dced344fb19d67a5d72a501a28d5ba0.jpg" },
+            { id: 10, name: "Carhartt WIP Ruben Stripe Ruuby shirt", price: 450000, image: "https://i.pinimg.com/1200x/a6/30/a2/a630a2b411cf9bbb0b6c928dd11c2df8.jpg" }
         ];
 
         let cart = [];
@@ -97,7 +123,6 @@
 
             totalPriceElement.innerText = `Total: ${total.toLocaleString()} VND`;
             localStorage.setItem("cart", JSON.stringify(cart));
-
         }
 
         function changeQuantity(id, amount) {
@@ -120,11 +145,35 @@
             if (cart.length === 0) {
                 alert("🛒 Your cart is empty!");
             } else {
-                alert("✅ Checkout successful! Thank you for your purchase.");
-                let cart = JSON.parse(localStorage.getItem("cart")) || [];
-                updateCart();
+                document.getElementById("checkout-form").style.display = "block";
             }
         }
+
+        function submitOrder() {
+            const fullname = document.getElementById("fullname").value;
+            const phone = document.getElementById("phone").value;
+            const address = document.getElementById("address").value;
+            const payment = document.getElementById("payment").value;
+
+            if (!fullname || !phone || !address) {
+                alert("Please fill all information!");
+                return;
+            }
+
+            let orderSummary = "Order Summary:\n";
+            cart.forEach(item => {
+                orderSummary += `${item.name} x${item.quantity}\n`;
+            });
+
+            alert(
+                `✅ Order Successful!\n\nName: ${fullname}\nPhone: ${phone}\nAddress: ${address}\nPayment: ${payment}\n\n${orderSummary}`
+            );
+
+            cart = [];
+            updateCart();
+            document.getElementById("checkout-form").style.display = "none";
+        }
+
 
         displayProducts();
         updateCart();
