--- a/Shirt Store.html
+++ b/Shirt Store.html
@@ -110,8 +110,8 @@
 
     <script>
         const products = [
-            { id: 1, name: "Frame Button-Up Shirt (Frame)", price: 500000, image: "https://i.pinimg.com/1200x/aa/90/cf/aa90cff663d02ecb264b6b4dca235c64.jpg" },
-            { id: 2, name: "Knit Shirt – Black", price: 800000, image: "https://i.pinimg.com/1200x/b1/b4/7f/b1b47f33ed75383583951f65afa9d151.jpg" },
+           { id: 1, name: "Frame Button-Up Shirt (Frame)", price: 500000, image: "https://i.pinimg.com/1200x/aa/90/cf/aa90cff663d02ecb264b6b4dca235c64.jpg" },
+            { id: 2, name: "Knit Shirt – Black/white", price: 800000, image: "https://i.pinimg.com/1200x/b1/b4/7f/b1b47f33ed75383583951f65afa9d151.jpg" },
             { id: 3, name: "Shirt Special", price: 300000, image: "https://i.pinimg.com/1200x/33/7f/75/337f758e64d55b910179c2044444d094.jpg" },
             { id: 4, name: "Knit Shirt – Black", price: 600000, image: "https://i.pinimg.com/736x/8a/e3/cd/8ae3cd45e08a7233bd94d0e22782a80a.jpg" },
             { id: 5, name: "Knit Shirt – White", price: 250000, image: "https://i.pinimg.com/736x/ab/7d/b6/ab7db62f3546c13462c4f56d60165b78.jpg" },
@@ -119,7 +119,13 @@
             { id: 7, name: "TC1-TS2104", price: 200000, image: "https://i.pinimg.com/736x/2a/e9/f7/2ae9f7b30bc3f330cc4260c58eea50b0.jpg" },
             { id: 8, name: "knit Shirt - green", price: 700000, image: "https://i.pinimg.com/736x/1d/2f/e4/1d2fe4450bba74d9af6c2c709c9deb09.jpg" },
             { id: 9, name: "Buck Masson", price: 350000, image: "https://i.pinimg.com/1200x/2d/ce/d3/2dced344fb19d67a5d72a501a28d5ba0.jpg" },
-            { id: 10, name: "Carhartt WIP Ruben Stripe Ruuby shirt", price: 450000, image: "https://i.pinimg.com/1200x/a6/30/a2/a630a2b411cf9bbb0b6c928dd11c2df8.jpg" }
+            { id: 10, name: "Carhartt WIP Ruben Stripe Ruuby shirt", price: 4196960, image: "https://i.pinimg.com/1200x/a6/30/a2/a630a2b411cf9bbb0b6c928dd11c2df8.jpg" },
+            { id: 11, name: "Lacoste kids", price: 2180000, image: "https://i.pinimg.com/1200x/f9/c6/d6/f9c6d60f6df6dff482d517c6dae17613.jpg" },
+            { id: 12, name: "Nike SB skate", price: 2075910, image: "https://i.pinimg.com/1200x/1a/c0/42/1ac042de2408c77827de4a6e2ecfbdee.jpg" },
+            { id: 13, name: "Playboy shirt", price: 800000, image: "https://i.pinimg.com/1200x/c0/53/ca/c053ca309531253295e1f3a8daef58f0.jpg" },
+            { id: 14, name: "Sleepwear LS Shirt", price: 305000, image: "https://i.pinimg.com/736x/7f/29/b0/7f29b09c12f135264f807ca043bad513.jpg" },
+            { id: 15, name: "Men's Flannel", price: 500000, image: "https://i.pinimg.com/736x/27/09/b2/2709b24d79718b78c5397258615a5b97.jpg" },
+            { id: 16, name: "H&M slim fit lien", price: 700000, image: "https://i.pinimg.com/736x/6e/88/8a/6e888a8e64de7c681f616ae35ae366cf.jpg" }
         ];
 
         let cart = [];
